--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <body>
         <header>
             <div class="profile">
-                <img src="./images/img_sky.jpg" alt="空の写真" width="100%" height="100%" class="block-center">
             </div>
         </header>
         <main>
@@ -36,9 +35,7 @@
             </section>
             <section id="contact">
                 <h2 class="text-center">Contact</h2>
-                    <div class="button_wrapper">
-                       <button class="button1">ボタン</button>
-                    </div>
+                    <a href="#" class="button">Button</a>
             </section>
         </main>
     </body>
